syntax = "proto3";

package exercise;

service ExerciseServices {
    rpc GetExercise (RqFindExercise) returns (RsFindExercise) {};
    rpc GetExercises (RqFindExercises) returns (RsFindExercises) {};
    rpc CreateExercise (RqCreateExercise) returns (RsCreateExercise) {};
    //rpc UpdateExercise (RqUpdateExercise) returns (RsUpdateExercise) {};
    //rpc DeleteExercise (RqDeleteExercise) returns (RsDeleteExercise) {};
}

/* ------------------- getExercise ------------------- */

message ExerciseData {
    string name = 1;
    string description = 2;
    string category = 3;
}

message RqFindExercise {
    string id = 1;
}

message RsFindExercise {
    int32 status = 1;
    string error = 2;
    ExerciseData data = 3;
}

/* ------------------- getExercises ------------------- */

message RqFindExercises {}

message RsFindExercises {
    int32 status = 1;
    string error = 2;
    repeated ExerciseData data = 3;
}

/* ------------------- createExercise ------------------- */

message RqCreateExercise {
    string name = 1;
    string description = 2;
    string category = 3;
}

message RsCreateExercise {
    int32 status = 1;
    string error = 2;
    string id = 3;
}